docs(adr): standardize and code-verify complete ADR inventory (0001-0070)
- Methodically refactor all 70 Architectural Decision Records (ADRs) into the canonical 8-section template (0000-template.md)
- Establish uniform 1-to-1 sequential numbering (0001 through 0070) with zero naming collisions, eliminating legacy RND- and supplement prefixes
- Normalize metadata headers to a single 7-field table, removing redundant bulleted lists
- Enforce open-source terminology across all records, purging corporate titles (CEO, CTO, Product Owner) and internal persona handles (@titan, @forge, @jarvis, etc.)
- Preserve 100% of mathematical formulations, Lyapunov stability proofs, Epanechnikov energy dynamics, and multi-plane layout diagrams
- Cross-verify all active architectural decisions against production code on main
- Update docs/adr/catalog.md and mkdocs.yml navigation with all 70 verified records
- Validate full documentation build in strict mode (mkdocs build --strict passes with 0 errors)

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>
Signed-off-by: Forge <forge@spectrayan.com>